--- a/.github/workflows/templates/python-template-pip.yml
+++ b/.github/workflows/templates/python-template-pip.yml
@@ -1,3 +1,16 @@
+# name = python-template-pip.yml
+# description = Reusable GitHub Actions workflow to set up Python via pip and run a specified command securely
+# category = security
+# usage = invoke via `uses: ./.github/workflows/python-template-pip.yml` with inputs `python-version` and `run-command`
+# behavior = Installs Python, upgrades pip, installs dependencies if present, and runs a user-specified command
+# inputs = python-version (string), run-command (string)
+# outputs = stdout and stderr logs, exit code of the provided command
+# dependencies = step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf, actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683, actions/setup-python@65d7f2d534ac1bc67fcd62888c5f4f3d2cb2b236, pip
+# author = Byron Williams
+# last_modified = 2025-04-19
+# tags = ci, python, automation
+# changelog = Replaced direct interpolation of run-command with environment variable and added metadata header
+
 name: Python (pip) Task
 
 on:
@@ -26,25 +39,27 @@ jobs:
               with:
                 egress-policy: audit
 
-            -   name: Checkout code
-                uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+            - name: Checkout code
+              uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-            -   name: Set up Python
-                uses: actions/setup-python@65d7f2d534ac1bc67fcd62888c5f4f3d2cb2b236 # v4.7.1
-                with:
-                    python-version: ${{ inputs.python-version }}
+            - name: Set up Python
+              uses: actions/setup-python@65d7f2d534ac1bc67fcd62888c5f4f3d2cb2b236 # v4.7.1
+              with:
+                  python-version: ${{ inputs.python-version }}
 
-            -   name: Upgrade pip and install requirements
-                run: |
-                    python -m pip install --upgrade pip
-                    if [ -f requirements.txt ]; then
-                      echo "Installing dependencies from requirements.txt..."
-                      pip install -r requirements.txt
-                    else
-                      echo "⚠️ No requirements.txt found. Skipping dependency installation."
-                    fi
+            - name: Upgrade pip and install requirements
+              run: |
+                  python -m pip install --upgrade pip
+                  if [ -f requirements.txt ]; then
+                    echo "Installing dependencies from requirements.txt..."
+                    pip install -r requirements.txt
+                  else
+                    echo "⚠️ No requirements.txt found. Skipping dependency installation."
+                  fi
 
-            -   name: Run Provided Command
-                run: |
-                    echo "Running command: ${{ inputs.run-command }}"
-                    ${{ inputs.run-command }}
+            - name: Run Provided Command
+              env:
+                RUN_COMMAND: ${{ inputs.run-command }}
+              run: |
+                echo "Running command: $RUN_COMMAND"
+                "${RUN_COMMAND}"
