--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,15 @@
+# name = pyproject.toml
+# description = Project configuration file for Poetry, linting, formatting, and build settings
+# category = dev
+# usage = Used by Poetry, Black, Ruff, and other tools for project configuration
+# behavior = Defines project metadata, dependencies, and tool configurations
+# inputs = none
+# outputs = none
+# dependencies = Poetry, Black, Ruff, MyPy, semantic-release
+# author = LedgerBase Team
+# last_modified = 2023-11-15
+# changelog = Initial version
+
 [tool.poetry]
 name = "ledgerbase"
 version = "0.1.0"
@@ -22,7 +34,7 @@ python-dateutil = "2.9.0.post0"
 plaid-python = "^15.3.0"
 PyYAML = "6.0.1"
 jinja2 = "^3.1.6"
-
+nox = "^2025.2.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.2.0"
@@ -31,13 +43,18 @@ black = "24.4.2"
 mypy = "^1.9.0"
 bandit = "^1.7.8"
 types-requests = "^2.31.0.10"
-nox = "^2025.2.9"
 pathspec = "^0.12.1"
 pydantic = "^2.11.3"
-sphinx = "^8.2.3"
-doc8 = "^1.1.2"
-jinja2 = "^3.1.6"
+sphinx = "^7.2.6"  # compatible with sphinx-rtd-theme 1.3.0
 ruff = "^0.11.5"
+python-semantic-release = "^7.16.0"
+pytest-cov = "^4.1.0"
+sphinx-rtd-theme = "^1.3.0"
+sphinxcontrib-plantuml = "^0.25"
+readthedocs-sphinx-search = "^0.1"
+sphinxcontrib-spelling = "^7.2"
+sphinx-lint = "^0.8"
+codespell = "^2.1"
 
 [tool.black]
 line-length = 88
@@ -45,30 +62,35 @@ target-version = ["py311"]
 skip-string-normalization = false
 
 [tool.ruff]
+# core formatter settings—no linter config here any more
 target-version = "py311"
-line-length = 88
-fix = true
-show-fixes = true
-extend-ignore = ["E265"]
+line-length    = 88
+fix            = true
+show-fixes     = true
 
 [tool.ruff.format]
-quote-style = "double"
-line-ending = "auto"
+quote-style         = "double"
+line-ending         = "auto"
 docstring-code-format = true
-indent-style = "space"
+indent-style        = "space"
 
 [tool.ruff.lint]
+# which error codes to check
 select = ["ALL"]
+
+# codes to suppress everywhere
 ignore = [
-  "D100",  # Missing docstring in public module
-  "D104",  # Missing docstring in public package
-  "D107",  # Missing docstring in __init__
-  "ANN101",  # Missing type annotation for self in method
-  "T201",  # print() used
-  "D203",  # 1 blank line required before class docstring
-  "D213",  #Multi-line docstring summary should start at the second line
-  "D205",  # Docstring under triple quotes shouldbe on the same line
+  "D100",   # Missing docstring in public module
+  "D104",   # Missing docstring in public package
+  "D107",   # Missing docstring in __init__
+  "T201",   # print() used
+  "D203",   # 1 blank line required before class docstring
+  "D213",   # Multi-line docstring summary should start at the second line
+  "D205",   # Docstring under triple quotes should be on the same line
+  "E265",   # Block comment should start with `# ` — suppressed due to metadata header usage
 ]
+
+# directories & files to skip entirely
 exclude = [
   ".git",
   ".nox",
@@ -80,25 +102,14 @@ exclude = [
   "tests",
 ]
 
-[tool.ruff.lint.isort]
-known-first-party = ["ledgerbase"]
-combine-as-imports = true
-
-[tool.ruff.per-file-ignores]
+# file‑specific overrides
+[tool.ruff.lint.per-file-ignores]
 "annotation_spec.md" = ["E501"]
 
 
-#[tool.mypy]
-#python_version = "3.12"
-#warn_unused_configs = true
-#disallow_untyped_defs = true
-#disallow_incomplete_defs = true
-#no_implicit_optional = true
-#check_untyped_defs = true
-#ignore_missing_imports = true
-#namespace_packages = true
-#show_error_codes = true
-#strict_equality = true
+[tool.ruff.lint.isort]
+known-first-party  = ["ledgerbase"]
+combine-as-imports = true
 
 [tool.mypy.requests]
 ignore_missing_imports = true
@@ -109,3 +120,8 @@ ignore_missing_imports = true
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.semantic_release]
+version_source = "tag"
+upload_to_pypi = true
+upload_to_git = true
