Resolve workflow issues

--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,14 @@
+# Define the project root for use in .env.dev
+export PROJECT_ROOT=$(pwd)
+
+# Load base development env
 dotenv ledgerbase_secure_env/.env.dev
-export ENV_FILE="$PWD/ledgerbase_secure_env/.env.prod"
+
+# Optionally load local overrides if they exist
+if [ -f ledgerbase_secure_env/.env.local ]; then
+  dotenv ledgerbase_secure_env/.env.local
+fi
+
+if [ -f .env.local ]; then
+  dotenv .env.local
+fi
