--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@
 # last_modified = 2025-04-21 # Updated date
 # changelog = Added missing dev dependencies from noxfile
 
+
 [tool.poetry]
 name = "ledgerbase"
 version = "0.1.0"
@@ -54,6 +55,7 @@ safety = "^3.4.0"
 
 # Security report formatters
 bandit-sarif-formatter = "^1.1.1"
+"sarif-tools" = "^3.0.4"
 
 # Documentation tools
 sphinx = "^8.2.0"
@@ -77,6 +79,18 @@ types-requests = "^2.31.0.10"
 pathspec = "^0.12.1"
 pydantic = "^2.9.0,<2.10.0"
 poetry-plugin-export = "^1.8.0"
+PyGithub = "^1.59.0"
+contourpy = "^1.3.2"
+
+
+[[tool.poetry.source]]
+name     = "assured-oss"
+url      = "https://us-python.pkg.dev/cloud-aoss/cloud-aoss-python/simple"
+priority = "primary"
+
+[[tool.poetry.source]]
+name     = "pypi"
+priority = "supplemental"
 
 [tool.ruff]
 # core formatter settings—no linter config here any more
