--- a/.github/workflows/templates/nox-template-matrix.yml
+++ b/.github/workflows/templates/nox-template-matrix.yml
@@ -12,74 +12,49 @@
 # changelog = - Stored session name in environment variable for safe interpolation
 #             - Wrapped session invocation in quotes to prevent injection
 
+# .github/workflows/templates/nox-template-matrix.yml
 name: Nox Matrix Test
 
 on:
-    workflow_call:
-        inputs:
-            session:
-                required: true
-                type: string
-            python-version:
-                required: false
-                type: string
-                default: "3.11"
+  workflow_call:
+    inputs:
+      session:
+        required: true
+        type: string
+      python-version:
+        required: false
+        type: string
+        default: '["3.11"]'
+
+permissions:
+  contents: read
 
 jobs:
-    nox-matrix:
-        name: Run ${{ inputs.session }} on Python ${{ matrix.python-version }}
-        runs-on: ubuntu-latest
+  prepare:
+    name: Prepare Poetry & Assured OSS
+    uses: ./.github/workflows/templates/prepare-poetry.yml
+    with:
+      GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
+    secrets:
+      GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
 
-        strategy:
-            matrix:
-                python-version: ${{ fromJson(inputs.python-version) }}
+  nox-matrix:
+    name: Run ${{ inputs.session }} on Python ${{ matrix.python-version }}
+    needs: prepare
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ${{ fromJson(inputs.python-version) }}
 
-        steps:
-            - name: Harden the runner (Audit all outbound calls)
-              uses: step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf # v2.11.1
-              with:
-                  egress-policy: audit
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-            - name: Checkout repository
-              uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
+      - name: Verify no public PyPI fallback
+        run: poetry run nox -s verify_assured
 
-            - name: Load Python versions from config (if not overridden)
-              if: inputs.python-version == '3.11'
-              id: load-versions
-              run: |
-                  VERSIONS=$(jq -c .python_versions .github/workflows/templates/python-versions.json)
-                  echo "matrix=${VERSIONS}" >> $GITHUB_OUTPUT
-
-            - name: Set dynamic matrix if default is used
-              if: inputs.python-version == '3.11'
-              uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-              with:
-                  script: |
-                      const matrix = process.env.matrix;
-                      core.setOutput('python-version', matrix);
-
-            - name: Set up Python
-              uses: actions/setup-python@b64ffcaf5b410884ad320a9cfac8866006a109aa # v4.8.0
-              with:
-                  python-version: ${{ matrix.python-version }}
-
-            - name: Cache Poetry + pip + .nox
-              uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
-              with:
-                  path: |
-                      ~/.cache/pypoetry
-                      ~/.cache/pip
-                      .nox
-                  key: ${{ runner.os }}-nox-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
-                  restore-keys: |
-                      ${{ runner.os }}-nox-${{ matrix.python-version }}-
-
-            - name: Install Nox
-              run: python -m pip install --upgrade nox
-
-            - name: Run Nox session
-              env:
-                  SESSION: ${{ inputs.session }}
-              run: |
-                  # Safely invoke the specified Nox session
-                  nox -s "$SESSION"
+      - name: Run Nox session
+        env:
+          SESSION: ${{ inputs.session }}
+        run: |
+          poetry run nox -s "$SESSION"
