--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,21 +13,30 @@
 version: 2
 
 build:
-    os: ubuntu-22.04
-    tools:
-        python: "3.11"
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+  # → Pre-build step: generate requirements.txt from Poetry
+  commands:
+    - bash ./generate_requirements.sh
 
 sphinx:
-    configuration: docs/source/conf.py
+  configuration: docs/source/conf.py
 
 python:
-    install:
-        - requirements: docs/requirements.txt
+  install:
+    # 1) Install all runtime dependencies
+    - requirements: requirements.txt
+    # 2) Install your package (with docs extras: myst-parser, sphinx, furo, etc.)
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
 
 formats:
-    - html
-    - pdf
+  - html
+  - pdf
 
 # build every tag as “stable” too
 projects:
-    stable: true
+  stable: true
